# triton-ir-diff

./: .gitignore  README.md  pyproject.toml
triton_differ/: __init__.py  cli.py  core.py  html_utils.py
