[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "triton_differ"
version = "0.1.0"
description = "A CLI tool for generating HTML comparisons of Triton IR files"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.5b2",
    "isort>=5.9.1",
]

[project.scripts]
triton-ir-diff = "triton_differ.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["triton_differ"]

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88
target-version = ["py37"]